kubedefs/appservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vproapp-service
spec:
  selector:
    app: vproapp
  ports:
    - protocol: TCP
      port: 8080       # Service port
      targetPort: vproapp-port # Container port
  type: ClusterIP       # Internal-only access
