kubedefs/mcservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprocache01
spec:
  selector:
    app: vpromc
  ports:
    - protocol: TCP
      port: 11211       # Service port
      targetPort: vpromc-port # Container port
  type: ClusterIP       # Internal-only access
