kubedefs/rmqservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vpromq01
spec:
  selector:
    app: vprormq
  ports:
    - protocol: TCP
      port: 5672       # Service port
      targetPort: vprormq-port # Container port
  type: ClusterIP       # Internal-only access
